[package]
name = "eris-staking-hub"
version = "1.3.0"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/liquid-staking-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw2 = "0.13.2"
cw20 = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }
cw-storage-plus = "0.13.2"
eris = { path = "../../packages/eris" }
itertools = "0.10"
thiserror = { version = "1.0" }
protobuf = "3"

[dev-dependencies]
cw-multi-test = "0.16"
anyhow = "1"
eris-tests = { path = "../../packages/eris-tests" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-schema = "1.0.0"
