[package]
name = "eris-compound-proxy"
version = "1.4.0"
authors = ["Spectrum", "Eris"]
edition = "2021"
description = "Proxy contract to perform auto-compound"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
eris = { path = "../../../packages/eris" }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", default-features = false, rev = "bc68bb65cc2f7d5916c1f0ea41de3b19b5b63b62" }
cw20 = { version = "0.13.2" }
cosmwasm-std = "1.1"
cosmwasm-schema = "1.1"
cw-storage-plus = { version = "0.13.2" }
schemars = "0.8.1"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cw-multi-test = "0.13.2"
proptest = "0.10.1"
